Endret til å bruke toList()